[package]
name = "frclib-commands"
version = "0.1.0"
edition = "2021"
description = "A library for writing FRC robot code in Rust"
license = "MIT"
authors = [
    "Bowan Foryt"
]
keywords = [
    "FRC",
    "Robotics",
    "First",
    "WPILib",
    "frclib"
]
categories = [
    "robotics"
]

[dependencies]
fxhash = "0.2.1"
thiserror = "1.0.53"
tracing = "0.1.40"
